--- a/app.css
+++ b/app.css
@@ -74,5 +74,7 @@ button:focus {
 	position: fixed;
 	bottom: 0px;
 	padding: 10px;
-	background: #ffff;
+	min-width: 50%;
+	left: 25%;
+	background: rgba(139, 183, 4, 0.65);
 }
