--- a/app.css
+++ b/app.css
@@ -16,7 +16,7 @@
     text-align: left;
     border: 1px solid #ddd;
 }
-td {
+.tracksTable td {
     border-bottom: 1px solid #ddd;
     border-radius: 5px;
     padding: 15px !important;
@@ -26,7 +26,7 @@ td {
     max-width: 400px;
     min-width: 50px;
 }
-tr:hover {
+.tracksTable tr:hover {
     background-color: #f5f5f5;
 }
 span.stars, span.stars span {
@@ -78,4 +78,9 @@ button:focus {
 	left: 20%;
 	right: 20%;
 	background: rgba(139, 183, 4, 0.65);
+}
+.musicControlTable{
+    min-width: 50%;
+    margin: 0 auto;
+    border-collapse: collapse;
 }
