--- a/views/default.html
+++ b/views/default.html
@@ -16,7 +16,7 @@
                     	<img class="editOption" src="./play.png" ng-click="playTrack(track, index)" width="32px"/>
                     </div>
                 	<div ng-show="currentSong === track">
-                    	<img class="editOption" src="./pause.png" ng-click="pauseTrack(track, index)" width="32px"/>
+                    	<img class="editOption" src="./Pause.png" ng-click="pauseTrack(track, index)" width="32px"/>
                     </div>
                 </td>
             </tr>
@@ -41,7 +41,7 @@
     					<img class="editOption" src="./Play.png" ng-click="playTrack(currentSong)" width="25px"/>
     				</div>
     				<div ng-show="isPlaying">
-    					<img class="editOption" src="./pause.png" ng-click="pauseTrack(currentSong)" width="25px"/>
+    					<img class="editOption" src="./Pause.png" ng-click="pauseTrack(currentSong)" width="25px"/>
     				</div>
     				<img class="editOption" src="./Stop.png" ng-click="stopPlayingTrack(currentSong)" width="25px"/>
     				<img class="editOption" src="./next.png" ng-click="playNextTrack(currentSong)" width="25px"/>
