--- a/views/default.html
+++ b/views/default.html
@@ -53,7 +53,7 @@
     				</div>
     			</td>
     			<td>
-    				<input type="range" class="seekBar" value="0">
+    				<input type="range" class="seekBar" value="seekBarProgress">
     			</td>
     		</tr>
     	</table>
