--- a/views/default.html
+++ b/views/default.html
@@ -53,7 +53,7 @@
     				</div>
     			</td>
     			<td>
-    				<input type="range" class="seekBar" min="0" max="100" ng-model="seekBarProgress">
+    				<input type="range" class="seekBar" min="0" max="100" ng-model="seekBarProgress" ng-change="seekTrack()">
     			</td>
     		</tr>
     	</table>
