--- a/views/default.html
+++ b/views/default.html
@@ -16,7 +16,7 @@
                     	<img class="editOption" src="./play.png" ng-click="playTrack(track, index)" width="32px"/>
                     </div>
                 	<div ng-show="currentSong === track && isPlaying">
-                    	<img class="editOption" src="./Pause.png" ng-click="pauseTrack(track, index)" width="32px"/>
+                    	<img class="editOption" src="./pause.png" ng-click="pauseTrack(track, index)" width="32px"/>
                     </div>
                 </td>
             </tr>
