--- a/views/default.html
+++ b/views/default.html
@@ -30,7 +30,7 @@
     </div>
     <div class="musicControl">
     	<table class="musicControlTable">
-    		<tr>
+    		<tr style="margin-bottom: 10px">
     			<td>{{currentSong.title}}
     			</td>
     		</tr>
