--- a/views/default.html
+++ b/views/default.html
@@ -41,7 +41,7 @@
     					<img class="editOption" src="./Play.png" ng-click="playTrack(currentSong)" width="25px"/>
     				</div>
     				<div ng-show="isPlaying">
-    					<img class="editOption" src="./Pause.png" ng-click="pauseTrack(currentSong)" width="25px"/>
+    					<img class="editOption" src="./Pause.png" ng-click="pauseTrack(currentSong)" width="25px" height="25px"/>
     				</div>
     				<img class="editOption" src="./Stop.png" ng-click="stopPlayingTrack(currentSong)" width="25px"/>
     				<img class="editOption" src="./next.png" ng-click="playNextTrack(currentSong)" width="25px"/>
